Change color palet and add some statistical tests

--- a/CABG/MBFTools/InterPatientVariability.ipynb
+++ b/CABG/MBFTools/InterPatientVariability.ipynb
@@ -240,7 +240,17 @@
     "\n",
     "    ScalarData = vtk_to_numpy(Volume.GetPointData().GetArray(ScalarArray))\n",
     "    return np.median(ScalarData)\n",
-    "\n"
+    "\n",
+    "def WilcoxonTest(array1, array2):\n",
+    "    w_value, p_value = wilcoxon(array1, array2)\n",
+    "    print(\"Wilcoxon test statistics: \", w_value)\n",
+    "    print(\"p-value: \", p_value)\n",
+    "    print(\"number of datapoints:\", len(array1))\n",
+    "\n",
+    "    if p_value < 0.05:\n",
+    "        print(\"Reject the null hypothesis: There is a significant difference between the two samples.\")\n",
+    "    else:\n",
+    "        print(\"Fail to reject the null hypothesis: There is no significant difference between the two samples.\")\n"
    ]
   },
   {
@@ -570,13 +580,84 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(7, 5))\n",
-    "ax = sns.boxplot(x='Territory', y='MBF', hue='Type', data= df_long, showfliers=False, width = 0.4, palette={'Pre-CABG':'lightskyblue', 'Post-CABG':'orangered'})\n",
+    "ax = sns.boxplot(x='Territory', y='MBF', hue='Type', data= df_long, showfliers=False, width = 0.4, fill= False, gap=.1, palette={'Pre-CABG':'green', 'Post-CABG':'orangered'}, medianprops={\"color\": \"k\", \"linewidth\": 2})\n",
     "\n",
     "ax.set_ylabel(\"Absolute MBF (mL/min/100mL)\", fontsize = 15)\n",
     "ax.tick_params(axis='x', rotation=0, labelsize=11)\n",
     "ax.legend(loc = 'upper left')\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Statistical Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "median_mbf_ischemic_A = []\n",
+    "median_mbf_ischemic_B = []\n",
+    "\n",
+    "for _, row in df[df['is_ischemic'] == True].iterrows():\n",
+    "    median_mbf_ischemic_A.append(np.median(row['absMBF_A']))\n",
+    "    median_mbf_ischemic_B.append(np.median(row['absMBF_B']))\n",
+    "\n",
+    "WilcoxonTest(median_mbf_ischemic_A, median_mbf_ischemic_B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "median_mbf_nonischemic_A = []\n",
+    "median_mbf_nonischemic_B = []\n",
+    "\n",
+    "for _, row in df[(df['is_ischemic'] == False) & (df['tag'] != 'Nongrafted') & (df['tag'] != \"Nongrafted-Stenosis\")].iterrows():\n",
+    "    median_mbf_nonischemic_A.append(np.median(row['absMBF_A']))\n",
+    "    median_mbf_nonischemic_B.append(np.median(row['absMBF_B']))\n",
+    "\n",
+    "WilcoxonTest(median_mbf_nonischemic_A, median_mbf_nonischemic_B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "median_mbf_stng_A = []\n",
+    "median_mbf_stng_B = []\n",
+    "\n",
+    "for _, row in df[df['tag'] == 'Nongrafted-Stenosis'].iterrows():\n",
+    "    median_mbf_stng_A.append(np.median(row['absMBF_A']))\n",
+    "    median_mbf_stng_B.append(np.median(row['absMBF_B']))\n",
+    "\n",
+    "WilcoxonTest(median_mbf_stng_A, median_mbf_stng_B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "median_mbf_ng_A = []\n",
+    "median_mbf_ng_B = []\n",
+    "\n",
+    "for _, row in df[df['tag'] == 'Nongrafted'].iterrows():\n",
+    "    median_mbf_ng_A.append(np.median(row['absMBF_A']))\n",
+    "    median_mbf_ng_B.append(np.median(row['absMBF_B']))\n",
+    "\n",
+    "WilcoxonTest(median_mbf_ng_A, median_mbf_ng_B)"
    ]
   },
   {
@@ -677,16 +758,85 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "plt.figure(figsize=(7, 5))\n",
-    "ax = sns.boxplot(x='Territory', y='MBF', hue='Type', data= df_long, showfliers=False, width = 0.4, palette={'Pre-CABG':'lightskyblue', 'Post-CABG':'orangered'})\n",
+    "ax = sns.boxplot(x='Territory', y='MBF', hue='Type', data= df_long, showfliers=False, width = 0.4, fill= False, gap=.1, palette={'Pre-CABG':'green', 'Post-CABG':'orangered'}, medianprops={\"color\": \"k\", \"linewidth\": 2})\n",
     "\n",
     "ax.set_ylabel(\"Absolute MBF (mL/min/100mL)\", fontsize = 15)\n",
     "ax.tick_params(axis='x', rotation=0, labelsize=11)\n",
     "ax.legend(loc = 'upper left')\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Statistical Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "median_mbf_ischemic10_A = []\n",
+    "median_mbf_ischemic10_B = []\n",
+    "\n",
+    "for _, row in df[df['ischemic_grade'] == 1].iterrows():\n",
+    "    median_mbf_ischemic10_A.append(np.median(row['absMBF_A']))\n",
+    "    median_mbf_ischemic10_B.append(np.median(row['absMBF_B']))\n",
+    "\n",
+    "WilcoxonTest(median_mbf_ischemic10_A, median_mbf_ischemic10_B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "median_mbf_ischemic20_A = []\n",
+    "median_mbf_ischemic20_B = []\n",
+    "\n",
+    "for _, row in df[df['ischemic_grade'] == 2].iterrows():\n",
+    "    median_mbf_ischemic20_A.append(np.median(row['absMBF_A']))\n",
+    "    median_mbf_ischemic20_B.append(np.median(row['absMBF_B']))\n",
+    "\n",
+    "WilcoxonTest(median_mbf_ischemic20_A, median_mbf_ischemic20_B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "median_mbf_ischemic30_A = []\n",
+    "median_mbf_ischemic30_B = []\n",
+    "\n",
+    "for _, row in df[df['ischemic_grade'] == 3].iterrows():\n",
+    "    median_mbf_ischemic30_A.append(np.median(row['absMBF_A']))\n",
+    "    median_mbf_ischemic30_B.append(np.median(row['absMBF_B']))\n",
+    "\n",
+    "WilcoxonTest(median_mbf_ischemic30_A, median_mbf_ischemic30_B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "median_mbf_ischemic0_A = []\n",
+    "median_mbf_ischemic0_B = []\n",
+    "\n",
+    "for _, row in df[df['ischemic_grade'] == 0].iterrows():\n",
+    "    median_mbf_ischemic0_A.append(np.median(row['absMBF_A']))\n",
+    "    median_mbf_ischemic0_B.append(np.median(row['absMBF_B']))\n",
+    "\n",
+    "WilcoxonTest(median_mbf_ischemic0_A, median_mbf_ischemic0_B)"
    ]
   },
   {
@@ -1680,8 +1830,8 @@
    "source": [
     "#Is ischemic\n",
     "\n",
-    "LAD_MBF_A = np.concatenate(df[(df[\"tag\"].isin(\"LAD\", \"Diag\")) & (df[\"is_ischemic\"] == True)][\"absMBF_A\"].values)\n",
-    "LAD_MBF_B = np.concatenate(df[(df[\"tag\"].isin(\"LAD\", \"Diag\"))& (df[\"is_ischemic\"] == True)][\"absMBF_B\"].values)\n",
+    "LAD_MBF_A = np.concatenate(df[(df[\"tag\"].isin([\"LAD\", \"Diag\"])) & (df[\"is_ischemic\"] == True)][\"absMBF_A\"].values)\n",
+    "LAD_MBF_B = np.concatenate(df[(df[\"tag\"].isin([\"LAD\", \"Diag\"]))& (df[\"is_ischemic\"] == True)][\"absMBF_B\"].values)\n",
     "\n",
     "LCx_MBF_A = np.concatenate(df[(df[\"tag\"].isin([\"LCx\", \"Ramus\", \"OM\"])) & (df[\"is_ischemic\"] == True)][\"absMBF_A\"].values)\n",
     "LCx_MBF_B = np.concatenate(df[(df[\"tag\"].isin([\"LCx\", \"Ramus\", \"OM\"])) & (df[\"is_ischemic\"] == True)][\"absMBF_B\"].values)\n",
@@ -1695,7 +1845,102 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_A = pd.DataFrame({\n",
+    "    'MBF': np.concatenate([LAD_MBF_A, LCx_MBF_A, RCA_MBF_A]),\n",
+    "    'Territory': [\"LAD\"] * len(LAD_MBF_A) +\n",
+    "                [\"LCx\"] * len(LCx_MBF_A) +\n",
+    "                [\"RCA\"] * len(RCA_MBF_A),\n",
+    "    'Type': ['Pre-CABG'] * (len(LAD_MBF_A) + len(LCx_MBF_A) + len(RCA_MBF_A))\n",
+    "})\n",
+    "\n",
+    "df_B = pd.DataFrame({\n",
+    "    'MBF': np.concatenate([LAD_MBF_B, LCx_MBF_B, RCA_MBF_B]),\n",
+    "    'Territory': [\"LAD\"] * len(LAD_MBF_B) +\n",
+    "                [\"LCx\"] * len(LCx_MBF_B) +\n",
+    "                [\"RCA\"] * len(RCA_MBF_B),\n",
+    "    'Type': ['Post-CABG'] * (len(LAD_MBF_B) + len(LCx_MBF_B) + len(RCA_MBF_B))\n",
+    "})\n",
+    "\n",
+    "df_long = pd.concat([df_A, df_B], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(7, 5))\n",
+    "ax = sns.boxplot(x='Territory', y='MBF', hue='Type', data= df_long, showfliers=False, width = 0.4, fill= False, gap=.1, palette={'Pre-CABG':'green', 'Post-CABG':'orangered'}, medianprops={\"color\": \"k\", \"linewidth\": 2})\n",
+    "\n",
+    "ax.set_ylabel(\"Absolute MBF (mL/min/100mL)\", fontsize = 15)\n",
+    "ax.tick_params(axis='x', rotation=0, labelsize=11)\n",
+    "plt.title(\"Comparing Ischemic Territories Pre/Post-CABG\")\n",
+    "ax.legend(loc = 'upper left')\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Is not ischemic\n",
+    "\n",
+    "LAD_MBF_A = np.concatenate(df[(df[\"tag\"].isin([\"LAD\", \"Diag\"])) & (df[\"is_ischemic\"] == False)][\"absMBF_A\"].values)\n",
+    "LAD_MBF_B = np.concatenate(df[(df[\"tag\"].isin([\"LAD\", \"Diag\"]))& (df[\"is_ischemic\"] == False)][\"absMBF_B\"].values)\n",
+    "\n",
+    "LCx_MBF_A = np.concatenate(df[(df[\"tag\"].isin([\"LCx\", \"Ramus\", \"OM\"])) & (df[\"is_ischemic\"] == False)][\"absMBF_A\"].values)\n",
+    "LCx_MBF_B = np.concatenate(df[(df[\"tag\"].isin([\"LCx\", \"Ramus\", \"OM\"])) & (df[\"is_ischemic\"] == False)][\"absMBF_B\"].values)\n",
+    "\n",
+    "RCA_MBF_A = np.concatenate(df[(df[\"tag\"].isin([\"PDA\", \"RCA\"])) & (df[\"is_ischemic\"] == False)][\"absMBF_A\"].values)\n",
+    "RCA_MBF_B = np.concatenate(df[(df[\"tag\"].isin([\"PDA\", \"RCA\"])) & (df[\"is_ischemic\"] == False)][\"absMBF_B\"].values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_A = pd.DataFrame({\n",
+    "    'MBF': np.concatenate([LAD_MBF_A, LCx_MBF_A, RCA_MBF_A]),\n",
+    "    'Territory': [\"LAD\"] * len(LAD_MBF_A) +\n",
+    "                [\"LCx\"] * len(LCx_MBF_A) +\n",
+    "                [\"RCA\"] * len(RCA_MBF_A),\n",
+    "    'Type': ['Pre-CABG'] * (len(LAD_MBF_A) + len(LCx_MBF_A) + len(RCA_MBF_A))\n",
+    "})\n",
+    "\n",
+    "df_B = pd.DataFrame({\n",
+    "    'MBF': np.concatenate([LAD_MBF_B, LCx_MBF_B, RCA_MBF_B]),\n",
+    "    'Territory': [\"LAD\"] * len(LAD_MBF_B) +\n",
+    "                [\"LCx\"] * len(LCx_MBF_B) +\n",
+    "                [\"RCA\"] * len(RCA_MBF_B),\n",
+    "    'Type': ['Post-CABG'] * (len(LAD_MBF_B) + len(LCx_MBF_B) + len(RCA_MBF_B))\n",
+    "})\n",
+    "\n",
+    "df_long = pd.concat([df_A, df_B], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(7, 5))\n",
+    "ax = sns.boxplot(x='Territory', y='MBF', hue='Type', data= df_long, showfliers=False, width = 0.4, fill= False, gap=.1, palette={'Pre-CABG':'green', 'Post-CABG':'orangered'}, medianprops={\"color\": \"k\", \"linewidth\": 2})\n",
+    "\n",
+    "ax.set_ylabel(\"Absolute MBF (mL/min/100mL)\", fontsize = 15)\n",
+    "ax.tick_params(axis='x', rotation=0, labelsize=11)\n",
+    "plt.title(\"Comparing Nonischemic Territories Pre/Post-CABG\")\n",
+    "ax.legend(loc = 'upper left')\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1742,6 +1987,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(Removed_Cases)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ScalarArray_A_Agg_Ischemic = []\n",
     "ScalarArray_B_Agg_Ischemic = []\n",
     "\n",
@@ -1775,7 +2029,7 @@
     "            ScalarArray_B_Name = arrayname_\n",
     "    \n",
     "    MappedScalarArrayName = \"MappedScalar\"\n",
-    "    ScalarArray_A = vtk_to_numpy(MBF_A.GetPointData().GetArray(MappedScalarArrayName))#ScalarArray_A_Name))\n",
+    "    ScalarArray_A = vtk_to_numpy(MBF_A.GetPointData().GetArray(ScalarArray_A_Name))#MappedScalarArrayName))#\n",
     "    ScalarArray_A_ = ScalarArray_A/np.percentile(ScalarArray_A, 75)\n",
     "    ScalarArray_B = vtk_to_numpy(MBF_B.GetPointData().GetArray(ScalarArray_B_Name))\n",
     "    ScalarArray_B_ = ScalarArray_B/np.percentile(ScalarArray_B, 75)\n",
@@ -1791,23 +2045,7 @@
     "    else:\n",
     "        ScalarArray_A_Agg_Nonischemic.append(ScalarArray_A_)\n",
     "        ScalarArray_B_Agg_Nonischemic.append(ScalarArray_B_)\n",
-    "\n",
-    "    \"\"\"\n",
-    "    array_A, cdf_A, threshold_A, cdf_threshold_A = cumdist(ScalarArray_A_)\n",
-    "    array_B, cdf_B, threshold_B, cdf_threshold_B = cumdist(ScalarArray_B_)\"\"\"\n",
-    "\n",
-    "    \"\"\"plt.figure(figsize=(8, 6))\n",
-    "    plt.plot(array_A, cdf_A, color = \"red\", label = \"Pre-CABG\")\n",
-    "    plt.plot(array_B, cdf_B, color = \"green\", label = \"Post-CABG\")\n",
-    "    plt.plot([0.8, 0.8], [0, max(cdf_threshold_A, cdf_threshold_B)], 'k--', label = \"cut-off = 0.8\")\n",
-    "    \n",
-    "\n",
-    "    #plt.xlim(-100, 500)\n",
-    "    plt.xlim(0, 3)\n",
-    "    plt.xlabel(\"MBF (mL/min/100mL)\", fontsize = 12)\n",
-    "    plt.ylabel(\"Cumulative Distribution Function\")\n",
-    "    plt.legend()\n",
-    "    plt.show()\"\"\""
+    "\n"
    ]
   },
   {
@@ -1820,8 +2058,8 @@
     "array_B, cdf_B, threshold_B, cdf_threshold_B = cumdist(np.concatenate(ScalarArray_B_Agg_Ischemic))\n",
     "\n",
     "plt.figure(figsize=(8, 6))\n",
-    "plt.plot(array_A, cdf_A, color = \"red\", label = \"Pre-CABG\")\n",
-    "plt.plot(array_B, cdf_B, color = \"green\", label = \"Post-CABG\")\n",
+    "plt.plot(array_A, cdf_A, color = \"green\", label = \"Pre-CABG\")\n",
+    "plt.plot(array_B, cdf_B, color = \"orangered\", label = \"Post-CABG\")\n",
     "plt.plot([0.8, 0.8], [0, max(cdf_threshold_A, cdf_threshold_B)], 'k--', label = \"cut-off = 0.8\")\n",
     "\n",
     "\n",
@@ -1844,8 +2082,8 @@
     "array_B, cdf_B, threshold_B, cdf_threshold_B = cumdist(np.concatenate(ScalarArray_B_Agg_Nonischemic))\n",
     "\n",
     "plt.figure(figsize=(8, 6))\n",
-    "plt.plot(array_A, cdf_A, color = \"red\", label = \"Pre-CABG\")\n",
-    "plt.plot(array_B, cdf_B, color = \"green\", label = \"Post-CABG\")\n",
+    "plt.plot(array_A, cdf_A, color = \"green\", label = \"Pre-CABG\")\n",
+    "plt.plot(array_B, cdf_B, color = \"orangered\", label = \"Post-CABG\")\n",
     "plt.plot([0.8, 0.8], [0, max(cdf_threshold_A, cdf_threshold_B)], 'k--', label = \"cut-off = 0.8\")\n",
     "\n",
     "\n",
@@ -1857,6 +2095,13 @@
     "plt.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
