Add AUC of CDF of index MBF

--- a/CABG/MBFTools/InterPatientVariability.ipynb
+++ b/CABG/MBFTools/InterPatientVariability.ipynb
@@ -1946,7 +1946,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cumulative Distribution Function"
+    "# Cumulative Distribution Function\n",
+    "\n",
+    "to do:\n",
+    " - Add area under the curve below the threshold\n",
+    " - Add statistical test for comparing the distributions (?)"
    ]
   },
   {
@@ -1961,7 +1965,12 @@
     "    cdf = np.arange(1, len(array) + 1)/len(array) * 100\n",
     "    idx = np.searchsorted(array, threshold, side='right') - 1\n",
     "    cdf_at_threshold = cdf[idx] if idx >= 0 else 0\n",
-    "    return array, cdf, threshold, cdf_at_threshold"
+    "\n",
+    "    x = array[array < threshold]\n",
+    "    y = cdf[array < threshold]\n",
+    "    AUC = np.trapz(y,x)\n",
+    "    \n",
+    "    return array, cdf, threshold, cdf_at_threshold, AUC"
    ]
   },
   {
@@ -2007,14 +2016,14 @@
     "        continue\n",
     "    #print(patient_id)\n",
     "\n",
-    "    for file in TerritoryLabels:\n",
+    "    \"\"\"for file in TerritoryLabels:\n",
     "        if patient_id in os.path.basename(os.path.splitext(file)[0]):\n",
-    "            LabelFile = file\n",
+    "            LabelFile = file\"\"\"\n",
     "\n",
     "    for file in MappedVTUFiles:\n",
     "        if f\"{patient_id}A\" in os.path.basename(os.path.splitext(file)[0]):\n",
     "            MBF_A = ReadVTUFile(file)\n",
-    "    for file in MappedVTUFiles:#VTUFiles:\n",
+    "    for file in VTUFiles:#MappedVTUFiles:#\n",
     "        if f\"{patient_id}B\" in os.path.basename(os.path.splitext(file)[0]):\n",
     "            MBF_B = ReadVTUFile(file)\n",
     "    \n",
@@ -2029,7 +2038,7 @@
     "            ScalarArray_B_Name = arrayname_\n",
     "    \n",
     "    MappedScalarArrayName = \"MappedScalar\"\n",
-    "    ScalarArray_A = vtk_to_numpy(MBF_A.GetPointData().GetArray(ScalarArray_A_Name))#MappedScalarArrayName))#\n",
+    "    ScalarArray_A = vtk_to_numpy(MBF_A.GetPointData().GetArray(MappedScalarArrayName))#ScalarArray_A_Name))#\n",
     "    ScalarArray_A_ = ScalarArray_A/np.percentile(ScalarArray_A, 75)\n",
     "    ScalarArray_B = vtk_to_numpy(MBF_B.GetPointData().GetArray(ScalarArray_B_Name))\n",
     "    ScalarArray_B_ = ScalarArray_B/np.percentile(ScalarArray_B, 75)\n",
@@ -2054,14 +2063,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "array_A, cdf_A, threshold_A, cdf_threshold_A = cumdist(np.concatenate(ScalarArray_A_Agg_Ischemic))\n",
-    "array_B, cdf_B, threshold_B, cdf_threshold_B = cumdist(np.concatenate(ScalarArray_B_Agg_Ischemic))\n",
+    "array_A, cdf_A, threshold_A, cdf_threshold_A, AUC_ischemic_A = cumdist(np.concatenate(ScalarArray_A_Agg_Ischemic))\n",
+    "array_B, cdf_B, threshold_B, cdf_threshold_B, AUC_ischemic_B = cumdist(np.concatenate(ScalarArray_B_Agg_Ischemic))\n",
+    "\n",
+    "x_AUC_A = array_A[array_A < threshold_A]\n",
+    "y_AUC_A = cdf_A[array_A < threshold_A]\n",
+    "\n",
+    "x_AUC_B = array_B[array_B < threshold_B]\n",
+    "y_AUC_B = cdf_B[array_B < threshold_B]\n",
     "\n",
     "plt.figure(figsize=(8, 6))\n",
     "plt.plot(array_A, cdf_A, color = \"green\", label = \"Pre-CABG\")\n",
     "plt.plot(array_B, cdf_B, color = \"orangered\", label = \"Post-CABG\")\n",
     "plt.plot([0.8, 0.8], [0, max(cdf_threshold_A, cdf_threshold_B)], 'k--', label = \"cut-off = 0.8\")\n",
-    "\n",
+    "plt.fill_between(x_AUC_A, y_AUC_A, color = 'lightgreen', alpha = 0.4, label= f\"AUC Pre-CABG = {int(AUC_ischemic_A*100)/100}\")\n",
+    "plt.fill_between(x_AUC_B, y_AUC_B, color = 'lightsalmon', alpha = 0.4, label= f\"AUC Post-CABG = {int(AUC_ischemic_B*100)/100}\")\n",
     "\n",
     "#plt.xlim(-100, 500)\n",
     "plt.xlim(0, 2)\n",
@@ -2078,13 +2094,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "array_A, cdf_A, threshold_A, cdf_threshold_A = cumdist(np.concatenate(ScalarArray_A_Agg_Nonischemic))\n",
-    "array_B, cdf_B, threshold_B, cdf_threshold_B = cumdist(np.concatenate(ScalarArray_B_Agg_Nonischemic))\n",
+    "array_A, cdf_A, threshold_A, cdf_threshold_A, AUC_A = cumdist(np.concatenate(ScalarArray_A_Agg_Nonischemic))\n",
+    "array_B, cdf_B, threshold_B, cdf_threshold_B, AUC_B = cumdist(np.concatenate(ScalarArray_B_Agg_Nonischemic))\n",
+    "\n",
+    "x_AUC_A = array_A[array_A < threshold_A]\n",
+    "y_AUC_A = cdf_A[array_A < threshold_A]\n",
+    "\n",
+    "x_AUC_B = array_B[array_B < threshold_B]\n",
+    "y_AUC_B = cdf_B[array_B < threshold_B]\n",
     "\n",
     "plt.figure(figsize=(8, 6))\n",
     "plt.plot(array_A, cdf_A, color = \"green\", label = \"Pre-CABG\")\n",
     "plt.plot(array_B, cdf_B, color = \"orangered\", label = \"Post-CABG\")\n",
     "plt.plot([0.8, 0.8], [0, max(cdf_threshold_A, cdf_threshold_B)], 'k--', label = \"cut-off = 0.8\")\n",
+    "plt.fill_between(x_AUC_A, y_AUC_A, color = 'lightgreen', alpha = 0.4, label= f\"AUC Pre-CABG = {int(AUC_A*100)/100}\")\n",
+    "plt.fill_between(x_AUC_B, y_AUC_B, color = 'lightsalmon', alpha = 0.4, label= f\"AUC Post-CABG = {int(AUC_B*100)/100}\")\n",
     "\n",
     "\n",
     "#plt.xlim(-100, 500)\n",
