Add cdf of normal grafted regions

--- a/CABG/MBFTools/InterPatientVariability.ipynb
+++ b/CABG/MBFTools/InterPatientVariability.ipynb
@@ -2536,63 +2536,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "PercentDiviation_A = np.array([])\n",
-    "PercentDiviation_B = np.array([])\n",
-    "\n",
-    "for patient_id in patient_ids:\n",
-    "    if patient_id in Removed_Cases: \n",
-    "        continue\n",
-    "\n",
-    "    for file in MappedVTUFiles:\n",
-    "        if f\"{patient_id}A\" in os.path.basename(os.path.splitext(file)[0]):\n",
-    "            MBF_A = ReadVTUFile(file)\n",
-    "        elif f\"{patient_id}B\" in os.path.basename(os.path.splitext(file)[0]):\n",
-    "            MBF_B = ReadVTUFile(file)\n",
-    "\n",
-    "\n",
-    "\n",
-    "    ScalarArray_A = vtk_to_numpy(MBF_A.GetPointData().GetArray(MappedScalarArrayName))\n",
-    "    \n",
-    "    ScalarArray_B_Name = \"scalars\"\n",
-    "    ScalarArray_B = vtk_to_numpy(MBF_B.GetPointData().GetArray(ScalarArray_B_Name))\n",
-    "\n",
-    "    RemoteMedian_A = np.median(np.concatenate(df[(df[\"patient_id\"] == patient_id) & (df[\"tag\"] == \"Nongrafted\")][\"absMBF_A\"].values))\n",
-    "    RemoteMedian_B = np.median(np.concatenate(df[(df[\"patient_id\"] == patient_id) & (df[\"tag\"] == \"Nongrafted\")][\"absMBF_B\"].values))\n",
-    "    ischemia_presence = list(df[df[\"patient_id\"] == patient_id][\"is_ischemic\"])\n",
-    "    is_ischemic = any(ischemia_presence)\n",
-    "\n",
-    "\n",
-    "    if is_ischemic:\n",
-    "\n",
-    "        PercentDiviation_A = np.append(PercentDiviation_A, (ScalarArray_A - RemoteMedian_A)/RemoteMedian_A*100)\n",
-    "        PercentDiviation_B = np.append(PercentDiviation_B, (ScalarArray_B - RemoteMedian_B)/RemoteMedian_B*100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "PercentDiviation_A_sorted = np.sort(PercentDiviation_A)\n",
-    "PercentDiviation_B_sorted = np.sort(PercentDiviation_B)\n",
-    "\n",
-    "cdf_A = np.arange(1, len(PercentDiviation_A_sorted) + 1)/len(PercentDiviation_A_sorted) * 100\n",
-    "cdf_B = np.arange(1, len(PercentDiviation_B_sorted) + 1)/len(PercentDiviation_B_sorted) * 100\n",
-    "\n",
-    "plt.figure(figsize=(9,7))\n",
-    "plt.plot(PercentDiviation_A_sorted, cdf_A, label=\"Pre-CABG\")\n",
-    "plt.plot(PercentDiviation_B_sorted, cdf_B, label=\"Post-CABG\")\n",
-    "plt.xlabel(\"Percent Diviation Based on the Remote Regions Median\")\n",
-    "plt.ylabel(\"Cumulative Distribution Function (%)\")\n",
-    "plt.xlim(-300, 300)\n",
-    "plt.legend()\n",
-    "plt.show()"
+    "## Only Ischemic Regions"
    ]
   },
   {
@@ -2674,7 +2621,79 @@
     "plt.ylim(0, 100)\n",
     "#plt.title(\"Ischemic Cases (>10% drop)\")\n",
     "plt.xlabel(\"Index MBF\", fontdict = font1)\n",
-    "plt.ylabel(\"Cumulative Distribution\\nFunction (%)\", fontdict = font1)\n",
+    "plt.ylabel(\"Fraction of Myocardial\\nVolume Involved (%)\", fontdict = font1)\n",
+    "plt.xticks(fontsize = 18)\n",
+    "plt.yticks(fontsize = 18)\n",
+    "plt.legend(loc = \"lower right\", fontsize = 16)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Grafted Regions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PercentDiviation_A = np.array([])\n",
+    "PercentDiviation_B = np.array([])\n",
+    "\n",
+    "for patient_id in patient_ids:\n",
+    "    if patient_id in Removed_Cases: \n",
+    "        continue\n",
+    "\n",
+    "    if df[(df[\"patient_id\"] == patient_id) & (df[\"tag\"] != \"Nongrafted\") & (df['tag'] != \"Nongrafted-Stenosis\") & (df[\"is_ischemic\"] == False)][\"absMBF_A\"].empty:\n",
+    "        continue\n",
+    "    ScalarArray_A = np.concatenate(df[(df[\"patient_id\"] == patient_id) & (df[\"tag\"] != \"Nongrafted\") & (df['tag'] != \"Nongrafted-Stenosis\") & (df[\"is_ischemic\"] == False)][\"absMBF_A\"].values)\n",
+    "    \n",
+    "    ScalarArray_B = np.concatenate(df[(df[\"patient_id\"] == patient_id) & (df[\"tag\"] != \"Nongrafted\") & (df['tag'] != \"Nongrafted-Stenosis\") & (df[\"is_ischemic\"] == False)][\"absMBF_B\"].values)\n",
+    "\n",
+    "    RemoteMedian_A = np.percentile(np.concatenate(df[(df[\"patient_id\"] == patient_id) & (df[\"tag\"] == \"Nongrafted\")][\"absMBF_A\"].values), 75)\n",
+    "    RemoteMedian_B = np.percentile(np.concatenate(df[(df[\"patient_id\"] == patient_id) & (df[\"tag\"] == \"Nongrafted\")][\"absMBF_B\"].values), 75)\n",
+    "\n",
+    "    PercentDiviation_A = np.append(PercentDiviation_A, (ScalarArray_A)/RemoteMedian_A)\n",
+    "    PercentDiviation_B = np.append(PercentDiviation_B, (ScalarArray_B)/RemoteMedian_B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "threshold = 0.8\n",
+    "\n",
+    "array_A, cdf_A, cdf_threshold_A, AUC_ischemic_A = cumdist(PercentDiviation_A, threshold)\n",
+    "array_B, cdf_B, cdf_threshold_B, AUC_ischemic_B = cumdist(PercentDiviation_B, threshold)\n",
+    "\n",
+    "\n",
+    "\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "plt.plot(array_A, cdf_A, color = \"mediumseagreen\", linewidth = 2.5, label = \"Pre-CABG\")\n",
+    "plt.plot(array_B, cdf_B, color = \"crimson\", linewidth = 2.5, label = \"Post-CABG\")\n",
+    "plt.plot([threshold, threshold], [0, max(cdf_threshold_A, cdf_threshold_B)], 'k--', linewidth = 2, label = \"cut-off = 0.8\")\n",
+    "plt.plot([-1, threshold], [cdf_threshold_A, cdf_threshold_A], \"k--\", linewidth = 2)\n",
+    "plt.plot([-1, threshold], [cdf_threshold_B, cdf_threshold_B], \"k--\", linewidth = 2)\n",
+    "\n",
+    "\n",
+    "plt.text(-1.0, cdf_threshold_A, f\"{int(cdf_threshold_A*100)/100}\", ha=\"right\", va=\"center\", transform=plt.gca().transData, fontsize = 16, color = 'mediumseagreen')\n",
+    "plt.text(-1.0, cdf_threshold_B, f\"{int(cdf_threshold_B*100)/100}\", ha=\"right\", va=\"center\", transform=plt.gca().transData, fontsize = 16, color = 'crimson')\n",
+    "#plt.text(threshold, -1, f\"{threshold}\", ha=\"right\", va=\"center\", transform=plt.gca().transdata, fontsize = 16, color = 'blue')\n",
+    "\n",
+    "#plt.fill_between(x_AUC_A, y_AUC_A, color = 'lightgreen', alpha = 0.4, label= f\"AUC Pre-CABG = {int(AUC_ischemic_A*100)/100}\")\n",
+    "#plt.fill_between(x_AUC_B, y_AUC_B, color = 'coral', alpha = 0.4, label= f\"AUC Post-CABG = {int(AUC_ischemic_B*100)/100}\")\n",
+    "\n",
+    "plt.xlim(-1, 2.5)\n",
+    "plt.ylim(0, 100)\n",
+    "#plt.title(\"Ischemic Cases (>10% drop)\")\n",
+    "plt.xlabel(\"Index MBF\", fontdict = font1)\n",
+    "plt.ylabel(\"Fraction of Myocardial\\nVolume Involved (%)\", fontdict = font1)\n",
     "plt.xticks(fontsize = 18)\n",
     "plt.yticks(fontsize = 18)\n",
     "plt.legend(loc = \"lower right\", fontsize = 16)\n",
