Add Bland Altman plot of hypoperfusion and change the characteristics of the violin plot

--- a/CABG/MBFTools/InterPatientVariability.ipynb
+++ b/CABG/MBFTools/InterPatientVariability.ipynb
@@ -214,11 +214,14 @@
     "def ViolinPlot(DataFrame):\n",
     "    plt.figure(figsize=(10, 6))\n",
     "\n",
-    "    sns.violinplot(x='Territories', y='MBF', hue='Type', data = DataFrame, split=True, inner = 'quartiles', bw_adjust = 10, common_norm=True, linewidth= 2, palette={'A':'skyblue', 'B':'salmon'})\n",
+    "    sns.violinplot(x='Territories', y='MBF', hue='Type', data = DataFrame, split=True, inner = 'quartiles', bw_adjust = 10, common_norm=True, linewidth=2.5, fill= False, gap=.1, palette={'Pre-CABG':'mediumseagreen', 'Post-CABG':'crimson'})\n",
     "\n",
-    "    plt.ylabel(\"Absolute MBF\")\n",
+    "    plt.ylabel(\"Absolute MBF (mL/min/100g)\", fontsize = 23)\n",
+    "    plt.tick_params(axis= 'x', labelsize = 18)\n",
+    "    plt.xticks(fontsize = 16)\n",
+    "    plt.yticks(fontsize = 18)\n",
     "    #plt.xlabel(\"Group\")\n",
-    "    plt.legend(title=\"Pre/Post CABG\")\n",
+    "    plt.legend(fontsize = 16)\n",
     "    #plt.ylim([-0.5, 3])\n",
     "    plt.show()\n",
     "\n",
@@ -322,34 +325,34 @@
     "    for i, t in enumerate(tags):\n",
     "        array_A = AbsMBFData_A[t]\n",
     "        array_B = AbsMBFData_B[t]\n",
-    "        data_ = pd.DataFrame({\"MBF\": np.concatenate([array_A, array_B]), \"Territories\": [t]*len(array_A) + [t]*len(array_B), \"Type\": ['A']*len(array_A) + ['B']*len(array_B)})\n",
+    "        data_ = pd.DataFrame({\"MBF\": np.concatenate([array_A, array_B]), \"Territories\": [t]*len(array_A) + [t]*len(array_B), \"Type\": ['Pre-CABG']*len(array_A) + ['Post-CABG']*len(array_B)})\n",
     "        data = pd.concat([data, data_], ignore_index=True)\n",
     "        # Mapping\n",
-    "        data_mapped_ = pd.DataFrame({\"MBF\": np.concatenate([MapNongrafted(mean_A, mean_B, std_A, std_B, array_A), array_B]), \"Territories\": [t]*len(array_A) + [t]*len(array_B), \"Type\": ['A']*len(array_A) + ['B']*len(array_B)})\n",
+    "        data_mapped_ = pd.DataFrame({\"MBF\": np.concatenate([MapNongrafted(mean_A, mean_B, std_A, std_B, array_A), array_B]), \"Territories\": [t]*len(array_A) + [t]*len(array_B), \"Type\": ['Pre-CABG']*len(array_A) + ['Post-CABG']*len(array_B)})\n",
     "        dataMapped = pd.concat([dataMapped, data_mapped_], ignore_index=True)\n",
     "    t = \"Nongrafted-Stenosis\"\n",
     "    if t in MBF_Labels.keys():\n",
     "        array_A = AbsMBFData_A[t]\n",
     "        array_B = AbsMBFData_B[t]\n",
-    "        data_ = pd.DataFrame({\"MBF\": np.concatenate([array_A, array_B]), \"Territories\": [t]*len(array_A) + [t]*len(array_B), \"Type\": ['A']*len(array_A) + ['B']*len(array_B)})\n",
+    "        data_ = pd.DataFrame({\"MBF\": np.concatenate([array_A, array_B]), \"Territories\": [t]*len(array_A) + [t]*len(array_B), \"Type\": ['Pre-CABG']*len(array_A) + ['Post-CABG']*len(array_B)})\n",
     "        data = pd.concat([data, data_], ignore_index=True)\n",
     "        # Mapping\n",
-    "        data_mapped_ = pd.DataFrame({\"MBF\": np.concatenate([MapNongrafted(mean_A, mean_B, std_A, std_B, array_A), array_B]), \"Territories\": [t]*len(array_A) + [t]*len(array_B), \"Type\": ['A']*len(array_A) + ['B']*len(array_B)})\n",
+    "        data_mapped_ = pd.DataFrame({\"MBF\": np.concatenate([MapNongrafted(mean_A, mean_B, std_A, std_B, array_A), array_B]), \"Territories\": [t]*len(array_A) + [t]*len(array_B), \"Type\": ['Pre-CABG']*len(array_A) + ['Post-CABG']*len(array_B)})\n",
     "        dataMapped = pd.concat([dataMapped, data_mapped_], ignore_index=True)\n",
     "    t = \"Nongrafted\"\n",
     "    array_A = AbsMBFData_A[t]\n",
     "    array_B = AbsMBFData_B[t]\n",
-    "    data_ = pd.DataFrame({\"MBF\": np.concatenate([array_A, array_B]), \"Territories\": [t]*len(array_A) + [t]*len(array_B), \"Type\": ['A']*len(array_A) + ['B']*len(array_B)})\n",
+    "    data_ = pd.DataFrame({\"MBF\": np.concatenate([array_A, array_B]), \"Territories\": [t]*len(array_A) + [t]*len(array_B), \"Type\": ['Pre-CABG']*len(array_A) + ['Post-CABG']*len(array_B)})\n",
     "    data = pd.concat([data, data_], ignore_index=True)\n",
     "    # Mapping\n",
-    "    data_mapped_ = pd.DataFrame({\"MBF\": np.concatenate([MapNongrafted(mean_A, mean_B, std_A, std_B, array_A), array_B]), \"Territories\": [t]*len(array_A) + [t]*len(array_B), \"Type\": ['A']*len(array_A) + ['B']*len(array_B)})\n",
+    "    data_mapped_ = pd.DataFrame({\"MBF\": np.concatenate([MapNongrafted(mean_A, mean_B, std_A, std_B, array_A), array_B]), \"Territories\": [t]*len(array_A) + [t]*len(array_B), \"Type\": ['Pre-CABG']*len(array_A) + ['Post-CABG']*len(array_B)})\n",
     "    dataMapped = pd.concat([dataMapped, data_mapped_], ignore_index=True)\n",
     "    \n",
     "    \n",
     "    #BoxPlot(data)\n",
-    "    #ViolinPlot(data)\n",
+    "    ViolinPlot(data)\n",
     "    #print(\"--- Mapping Results:\")\n",
-    "    #ViolinPlot(dataMapped)\n"
+    "    ViolinPlot(dataMapped)\n"
    ]
   },
   {
@@ -1822,7 +1825,6 @@
    "outputs": [],
    "source": [
     "\n",
-    "\n",
     "df_A = pd.DataFrame({\n",
     "    'MBF': np.concatenate([LAD_MBF_A, LCx_MBF_A, RCA_MBF_A]),\n",
     "    'Territory': [\"LAD\"] * len(LAD_MBF_A) +\n",
@@ -2629,6 +2631,74 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Array_A = np.array([])\n",
+    "Array_B = np.array([])\n",
+    "\n",
+    "for patient_id in patient_ids:\n",
+    "    if patient_id in Removed_Cases: \n",
+    "        continue\n",
+    "    ischemia_presence = list(df[df[\"patient_id\"] == patient_id][\"is_ischemic\"])\n",
+    "    is_ischemic = any(ischemia_presence)\n",
+    "\n",
+    "\n",
+    "    if is_ischemic:\n",
+    "        ScalarArray_A = np.concatenate(df[(df[\"patient_id\"] == patient_id) & (df[\"is_ischemic\"] == True)][\"absMBF_A\"].values)\n",
+    "        \n",
+    "        ScalarArray_B = np.concatenate(df[(df[\"patient_id\"] == patient_id) & (df[\"is_ischemic\"] == True)][\"absMBF_B\"].values)\n",
+    "\n",
+    "        RemoteMedian_A = np.percentile(np.concatenate(df[(df[\"patient_id\"] == patient_id) & (df[\"tag\"] == \"Nongrafted\")][\"absMBF_A\"].values), 75)\n",
+    "        RemoteMedian_B = np.percentile(np.concatenate(df[(df[\"patient_id\"] == patient_id) & (df[\"tag\"] == \"Nongrafted\")][\"absMBF_B\"].values), 75)\n",
+    "\n",
+    "        IndexMBF_A = ScalarArray_A/RemoteMedian_A\n",
+    "        IschemicMask_A = IndexMBF_A < 0.8\n",
+    "\n",
+    "        IndexMBF_B = ScalarArray_B/RemoteMedian_B\n",
+    "        IschemicMask_B = IndexMBF_B < 0.8\n",
+    "        \n",
+    "\n",
+    "        Array_A = np.append(Array_A, len(IschemicMask_A[IschemicMask_A == 1])/len(IndexMBF_A)*100)\n",
+    "        Array_B = np.append(Array_B, len(IschemicMask_B[IschemicMask_B == 1])/len(IndexMBF_B)*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean = np.mean([Array_A, Array_B], axis = 0)\n",
+    "diff = Array_B - Array_A\n",
+    "md = np.mean(diff) # Mean of difference\n",
+    "sd = np.std(diff, axis = 0) #standard deviation of difference\n",
+    "\n",
+    "plt.scatter(mean, diff, color=\"mediumvioletred\", s = 80)\n",
+    "\n",
+    "loa_upper = md + 1.96*sd\n",
+    "loa_lower = md - 1.96*sd\n",
+    "\n",
+    "plt.text(23, loa_upper + 0.002, f'+1.96 σ = {loa_upper:.2f}', color='gray', va='bottom', fontsize = 20)\n",
+    "plt.text(23, loa_lower - 0.002, f'-1.96 σ = {loa_lower:.2f}', color='gray', va='top',  fontsize = 20)\n",
+    "plt.text(23, md + 0.002, f'{md:.2f} $\\pm$ {sd:.2f}', color='gray', va='bottom',  fontsize = 20)\n",
+    "\n",
+    "plt.axhline(md, color='gray', linestyle='--')\n",
+    "plt.axhline(loa_upper, color='gray', linestyle='--')\n",
+    "plt.axhline(loa_lower, color='gray', linestyle='--')\n",
+    "plt.xlabel(\"Mean of Normalized Volume (%)\", fontdict=font1)\n",
+    "plt.ylabel(\"Normalized Volume (%)\\n(Post-CABG - Pre-CABG)\", fontdict=font1)\n",
+    "plt.xticks(fontsize = 23)\n",
+    "plt.yticks(fontsize = 23)\n",
+    "plt.ylim((-90,50))\n",
+    "#plt.legend(loc='upper left', fontsize = 23)\n",
+    "plt.title(\"Volume of hypoperfusion in\\nregions depleted from blood flow\", fontdict = font1)\n",
+    "plt.show()\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2698,6 +2768,75 @@
     "plt.yticks(fontsize = 18)\n",
     "plt.legend(loc = \"lower right\", fontsize = 16)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Array_A = np.array([])\n",
+    "Array_B = np.array([])\n",
+    "\n",
+    "for patient_id in patient_ids:\n",
+    "    if patient_id in Removed_Cases: \n",
+    "        continue\n",
+    "\n",
+    "    if df[(df[\"patient_id\"] == patient_id) & (df[\"tag\"] != \"Nongrafted\") & (df['tag'] != \"Nongrafted-Stenosis\") & (df[\"is_ischemic\"] == False)][\"absMBF_A\"].empty:\n",
+    "        continue\n",
+    "\n",
+    "    ScalarArray_A = np.concatenate(df[(df[\"patient_id\"] == patient_id) & (df[\"tag\"] != \"Nongrafted\") & (df['tag'] != \"Nongrafted-Stenosis\") & (df[\"is_ischemic\"] == False)][\"absMBF_A\"].values)\n",
+    "    \n",
+    "    ScalarArray_B = np.concatenate(df[(df[\"patient_id\"] == patient_id) & (df[\"tag\"] != \"Nongrafted\") & (df['tag'] != \"Nongrafted-Stenosis\") & (df[\"is_ischemic\"] == False)][\"absMBF_B\"].values)\n",
+    "\n",
+    "    RemoteMedian_A = np.percentile(np.concatenate(df[(df[\"patient_id\"] == patient_id) & (df[\"tag\"] == \"Nongrafted\")][\"absMBF_A\"].values), 75)\n",
+    "    RemoteMedian_B = np.percentile(np.concatenate(df[(df[\"patient_id\"] == patient_id) & (df[\"tag\"] == \"Nongrafted\")][\"absMBF_B\"].values), 75)\n",
+    "\n",
+    "    IndexMBF_A = ScalarArray_A/RemoteMedian_A\n",
+    "    IschemicMask_A = IndexMBF_A < 0.8\n",
+    "\n",
+    "    IndexMBF_B = ScalarArray_B/RemoteMedian_B\n",
+    "    IschemicMask_B = IndexMBF_B < 0.8\n",
+    "    \n",
+    "\n",
+    "    Array_A = np.append(Array_A, len(IschemicMask_A[IschemicMask_A == 1])/len(IndexMBF_A)*100)\n",
+    "    Array_B = np.append(Array_B, len(IschemicMask_B[IschemicMask_B == 1])/len(IndexMBF_B)*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "mean = np.mean([Array_A, Array_B], axis = 0)\n",
+    "diff = Array_B - Array_A\n",
+    "md = np.mean(diff) # Mean of difference\n",
+    "sd = np.std(diff, axis = 0) #standard deviation of difference\n",
+    "\n",
+    "plt.scatter(mean, diff, color=\"cornflowerblue\", s = 80)\n",
+    "\n",
+    "loa_upper = md + 1.96*sd\n",
+    "loa_lower = md - 1.96*sd\n",
+    "\n",
+    "plt.text(20, loa_upper + 0.002, f'+1.96 σ = {loa_upper:.2f}', color='gray', va='bottom', fontsize = 20)\n",
+    "plt.text(20, loa_lower - 0.002, f'-1.96 σ = {loa_lower:.2f}', color='gray', va='top',  fontsize = 20)\n",
+    "plt.text(20, md + 0.002, f'{md:.2f} $\\pm$ {sd:.2f}', color='gray', va='bottom',  fontsize = 20)\n",
+    "\n",
+    "plt.axhline(md, color='gray', linestyle='--')\n",
+    "plt.axhline(loa_upper, color='gray', linestyle='--')\n",
+    "plt.axhline(loa_lower, color='gray', linestyle='--')\n",
+    "plt.xlabel(\"Mean of Normalized Volume (%)\", fontdict=font1)\n",
+    "plt.ylabel(\"Normalized Volume (%)\\n(Post-CABG - Pre-CABG)\", fontdict=font1)\n",
+    "plt.xticks(fontsize = 23)\n",
+    "plt.yticks(fontsize = 23)\n",
+    "plt.ylim((-70,60))\n",
+    "#plt.legend(loc='upper left', fontsize = 23)\n",
+    "plt.title(\"Volume of hypoperfusion in\\nnormal grafted regions\", fontdict = font1)\n",
+    "plt.show()\n"
    ]
   },
   {
